# Trust-Aid

./: .gitignore  Dockerfile  README.md  baseline_inference.py  environment.py  graders.py  index.html  inference.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
src/: App.jsx  openenv.js
src/components/: ChatPage.css  ChatPage.jsx  FloatingChatbot.css  FloatingChatbot.jsx  HomePage.css  HomePage.jsx  OTPLogin.css  OTPLogin.jsx  Onboarding.css  Onboarding.jsx  PermissionGate.css  PermissionGate.jsx  SOSButton.css  SOSButton.jsx  Sidebar.css  Sidebar.jsx
src/hooks/: useLocation.js  useTheme.js
src/styles/: global.css
